# MeshToSS

./: CMakeLists.txt  LICENSE  LICENSE.md  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.in
Data/: bunny.ppd  bunny.smf  bunny.wrl  bunny_500_sub.wrl  dodeca.wrl  horse.wrl  knots.smf  knots.wrl  knots_1000_sub.wrl  sphere.wrl  venus.smf  venus.wrl
MFC/: ConvSubdiv.cpp  ConvSubdiv.h  MainFrm.cpp  MainFrm.h  MaterialDialog.cpp  MaterialDialog.h  MeshInfoDialog.cpp  MeshInfoDialog.h  MeshToSS.aps  MeshToSS.clw  MeshToSS.cpp  MeshToSS.dsp  MeshToSS.dsw  MeshToSS.h  MeshToSS.opt  MeshToSS.plg  MeshToSS.rc  MeshToSS.sln  MeshToSS.vcproj  MeshToSS.vcxproj  MeshToSS.vcxproj.filters  MeshToSSDoc.cpp  MeshToSSDoc.h  MeshToSSView.cpp  MeshToSSView.h  QuitDialog.cpp  QuitDialog.h  SRDialog.cpp  SRDialog.h  StdAfx.cpp  StdAfx.h  optmesh.dsp  optmesh.dsw  optmesh.vcproj  optmesh.vcxproj  optmesh.vcxproj.filters  resource.h  resource.hm
MFC/Backup/: MeshToSS.sln
MFC/res/: MeshToSS.rc2
config/: config.h
libvrml97/: INSTALL  NODES  README
libvrml97/libvrml97core/src/vrml97/: Audio.cpp  Doc.cpp  Doc.h  Image.cpp  ScriptJS.cpp  VrmlField.cpp  VrmlField.h  VrmlNamespace.cpp  VrmlNode.h  VrmlScene.cpp  jpgread.cpp  lexer.cpp  parser.cpp  parser.h  pngread.cpp
libvrml97/libvrml97core/win32/: libvrml97core.001  libvrml97core.dsp  libvrml97core.plg  libvrml97core.vcproj  libvrml97core.vcproj.old  libvrml97core.vcxproj  libvrml97core.vcxproj.filters
libvrml97/libvrml97gl/src/vrml97gl/: OpenGLEvent.h
libvrml97/libvrml97gl/src/vrml97gl/CVS/: Entries  Repository
libvrml97/libvrml97gl/win32/: libvrml97gl.dsp  libvrml97gl.plg
libvrml97/libvrml97js/src/vrml97js/: js.mdp
libvrml97/libvrml97js/src/vrml97js/fdlibm/: fdlibm.mdp
libvrml97/libvrml97js/src/vrml97js/liveconnect/classes/netscape/CVS/: Entries  Repository
libvrml97/libvrml97js/src/vrml97js/liveconnect/classes/netscape/javascript/CVS/: Entries  Repository
libvrml97/libvrml97js/src/vrml97js/liveconnect/macbuild/: LiveConnect.mcp  LiveConnectShell.mcp
libvrml97/libvrml97js/src/vrml97js/macbuild/: JSRef.mcp
libvrml97/libvrml97js/win32/: fdlibm.dsp  fdlibm.plg  fdlibm.vcproj  fdlibm.vcproj.old  fdlibm.vcxproj  fdlibm.vcxproj.filters  libvrml97js.001  libvrml97js.dsp  libvrml97js.plg  libvrml97js.vcproj  libvrml97js.vcproj.old  libvrml97js.vcxproj  libvrml97js.vcxproj.filters
libvrml97/lookat/wrl/CVS/: Entries  Repository
libvrml97/lookat/wrl/textures/CVS/: Entries  Repository  Root
libvrml97/win32/: libvrml97.dsw  libvrml97.ncb  libvrml97.opt
optmesh/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  file.cxx  file.h  intsec.cxx  intsec.h  linbcg.cxx  linbcg.h  lodprique.cxx  lodprique.h  matlib.cxx  matlib.h  meshtoss.cxx  mytime.cxx  mytime.h  octree.cxx  octree.h  oppd.cxx  oppd.h  optmesh.dsp  optmesh.vcproj  optmesh.vcxproj  optmesh.vcxproj.filters  params.h  ppd.cxx  ppd.h  ppdedge.cxx  ppdedge.h  ppdface.cxx  ppdface.h  ppdlist.cxx  ppdlist.h  ppdnormal.cxx  ppdnormal.h  ppdpart.cxx  ppdpart.h  ppdsolid.cxx  ppdsolid.h  (+22 more)
qt/: CMakeLists.txt  main.cpp  meshtoss_swin.cpp  params_globals.cxx
src/: ConvSubdiv.cpp  ConvSubdiv.h  MainFrm.cpp  MainFrm.cpp.bak  MainFrm.h  Material.cpp  Material.h  MaterialDialog.cpp  MaterialDialog.h  MeshInfoDialog.cpp  MeshInfoDialog.h  MeshToSS.aps  MeshToSS.clw  MeshToSS.cpp  MeshToSS.h  MeshToSS.rc  MeshToSSDoc.cpp  MeshToSSDoc.h  MeshToSSView.cpp  MeshToSSView.h  QuitDialog.cpp  SRDialog.cpp  SRDialog.h  StdAfx.cpp  StdAfx.h  bitmap.cpp  bitmap.h  color.h  draw.cpp  draw.h  edit.cpp  edit.h  glppd.cpp  glppd.h  light.h  meshtoss_gui_prefix.h  mtl.h  pick.cpp  pick.h  resource.h  (+14 more)
