# @start 1
# configure.in -- Process this file with autoconf to produce configure
# @start 2
# Copyright (C) 2000 Gary V. Vaughan
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

# @start 1
AC_INIT(optmesh/smd.h)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config/config.h:config.h.in)
AM_INIT_AUTOMAKE(MeshToSS, 1.1)
MDRAW_MAJOR=1
MDRAW_MINOR=1
MDRAW_TINY=0

AM_CONFIG_HEADER(config.h)
#AC_DISABLE_FAST_INSTALL

AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

AC_HEADER_STDC
AC_HEADER_SYS_WAIT

AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T

#AC_CHECK_FUNCS(bzero memset, break)
#AC_CHECK_FUNCS(calloc strchr strrchr)
#AC_REPLACE_FUNCS(basename strspn strcspn strerror strsignal waitpid)

save_LIBS="$LIBS"
#test x"${with_readline-no}" != xno && LIBS="$LIBS -lreadline"
#AC_REPLACE_FUNCS(readline)
AC_CHECK_FUNCS(add_history)
LIBS="$save_LIBS"

AC_SUBST(ac_aux_dir)

AC_OUTPUT([Makefile optmesh/Makefile],
[test -z "$CONFIG_HEADERS" || echo timestamp > config/stamp-h.in])
# @end 1
